--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>Обновления DOTA 2</title>
+	<title>Patch note 5.0.3</title>
     <meta charset = 'utf-8'/>
     <meta name = 'viewport' content = 'width=device-width, initial-scale=1.0'>
     <link href = 'reset.css' rel = 'stylesheet'/>
